Reported and fixed language flag overlapping.

--- a/less/carousel.less
+++ b/less/carousel.less
@@ -16,10 +16,10 @@
 	background-color: rgba(0,0,0,0);
 	background-image: none !important;
 	font-size: 50px;
-	height: 90%;
+	height: 80%;
 	opacity: 1;
 	position: absolute;
-	top: 5%;
+	top: 10%;
 	width: 7%;
 
 	& .right-sidebar {
